--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,5 @@
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
   },
-  "hostRequirements": {"memory": "16gb", "cpus": 4}
+  "hostRequirements": {"memory": "16gb"}
 }
