--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: hub
 
 on:
   repository_dispatch:
@@ -8,6 +8,7 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   HOPPSCOTH_RELEASE: ${{ github.event.client_payload.tag_name }}
+  HOPPSCOTH_MAJOR: ${{ github.event.client_payload.tag_major }}
 
 jobs:
   build:
@@ -18,21 +19,17 @@ jobs:
       id-token: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
-      - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+      - uses: actions/checkout@v3
+      - uses: docker/setup-buildx-action@v2
+      - uses: docker/login-action@v2
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build Docker image
-        run: docker build --build-arg HOPPSCOTH_RELEASE=${{ env.HOPPSCOTH_RELEASE }} . -t ${{ env.IMAGE_NAME }}:${{ env.HOPPSCOTH_RELEASE }} -t ${{ env.IMAGE_NAME }}:latest
-      - name: Push Docker image release
-        run: docker push ${{ env.IMAGE_NAME }}:${{ env.HOPPSCOTH_RELEASE }}
-      - name: Push Docker image latest
-        run: docker push ${{ env.IMAGE_NAME }}:latest
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - uses: docker/build-push-action@v2
+        with:
+          build-args: |
+            HOPPSCOTH_RELEASE=${{ env.HOPPSCOTH_RELEASE }}
+          tags: |
+            ${{ env.IMAGE_NAME }}:${{ env.HOPPSCOTH_RELEASE }}
+            ${{ env.IMAGE_NAME }}:${{ env.HOPPSCOTH_MAJOR }}
+            ${{ env.IMAGE_NAME }}:latest
