--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,6 +27,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - uses: docker/build-push-action@v2
         with:
+          push: true
           build-args: |
             HOPPSCOTH_RELEASE=${{ env.HOPPSCOTH_RELEASE }}
           tags: |
