--- a/.github/workflows/docker-github-publish.yml
+++ b/.github/workflows/docker-github-publish.yml
@@ -19,8 +19,8 @@ jobs:
       - uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ github.actor }}
+          password:  ${{ secrets.GITHUB_TOKEN }}
       - uses: docker/build-push-action@v4
         with:
           context: .
