--- a/.github/workflows/docker-github-publish.yml
+++ b/.github/workflows/docker-github-publish.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           context: .
           push: true
+          provenance: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
