--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+      - uses: docker/setup-qemu-action@v2
       - uses: docker/setup-buildx-action@v2
       - uses: docker/login-action@v2
         with:
@@ -23,6 +24,8 @@ jobs:
         with:
           context: .
           push: true
+          provenance: true
+          sbom: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
