--- a/.github/workflows/docker-github-publish.yml
+++ b/.github/workflows/docker-github-publish.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           context: .
           push: true
-          provenance: false
+          provenance: true
           sbom: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
