--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -14,6 +14,12 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+      - uses: docker/metadata-action@v4
+        with:
+          images: hoppscotch/hoppscotch
+          labels: |
+            maintainer=Webysther
+            org.opencontainers.image.description=All-in-one hoppscotch image that works with one domain and have embed smtp
       - uses: docker/setup-qemu-action@v2
       - uses: docker/setup-buildx-action@v2
       - uses: docker/login-action@v2
