--- a/.github/workflows/docker-github-publish.yml
+++ b/.github/workflows/docker-github-publish.yml
@@ -17,6 +17,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: docker/metadata-action@v4
         with:
+          images: |
+            lsiobase/ubuntu
+            hoppscotch/hoppscotch
+            webysther/hoppscotch
           labels: |
             maintainer=Webysther
             org.opencontainers.image.authors=linuxserver.io,github.com/hoppscotch/hoppscotch,github.com/webysther/hoppscotch-docker
