--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: docker/metadata-action@v4
         with:
+          images: hoppscotch/hoppscotch
           labels: |
             maintainer=Webysther
             org.opencontainers.image.authors=linuxserver.io,github.com/hoppscotch/hoppscotch,github.com/webysther/hoppscotch-docker
