--- a/.github/workflows/docker-container-publish.yml
+++ b/.github/workflows/docker-container-publish.yml
@@ -14,8 +14,13 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
-      - uses: docker/metadata-action@v4
+      - 
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
         with:
           images: hoppscotch/hoppscotch
           labels: |
@@ -27,14 +32,28 @@ jobs:
             org.opencontainers.image.version=${{ env.HOPPSCOTH_RELEASE }}
             org.opencontainers.image.documentation=https://github.com/webysther/hoppscotch-docker#application-setup
             org.opencontainers.image.vendor=Hoppscotch
-      - uses: docker/setup-qemu-action@v2
-      - uses: docker/setup-buildx-action@v2
-      - uses: docker/login-action@v2
+      - 
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - 
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password:  ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v4
+      - 
+        name: Build and push
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
@@ -51,3 +70,4 @@ jobs:
           platforms: |
             linux/amd64
             linux/arm64
+          labels: ${{ steps.meta.outputs.labels }}
