--- a/.github/workflows/docker-container-publish.yml
+++ b/.github/workflows/docker-container-publish.yml
@@ -49,7 +49,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password:  ${{ secrets.GITHUB_TOKEN }}
       - 
         name: Build and push
@@ -57,7 +57,7 @@ jobs:
         with:
           context: .
           push: true
-          provenance: false
+          provenance: true
           sbom: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
